smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-syntax-error.smithy
// Expected a valid identifier character, but found '\n'
namespace not.valid.trailing.
